# terminal-display

./: Cargo.toml  LICENSE  README.md
examples/: color_wave.rs  line.rs  square.rs
src/: color.rs  lib.rs
